[gd_scene load_steps=3 format=2]

[ext_resource path="res://Screens/Menu/SpellBook.gd" type="Script" id=1]
[ext_resource path="res://Screens/Menu/MilkyWay.svg" type="Texture" id=2]

[node name="SpellBook" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_right = 700.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="MilkyWay" type="Sprite" parent="HBoxContainer/Panel"]
position = Vector2( 342, 285 )
texture = ExtResource( 2 )

[node name="Slot1" type="Position2D" parent="HBoxContainer/Panel/MilkyWay"]
position = Vector2( 38, 60 )

[node name="Slot2" type="Position2D" parent="HBoxContainer/Panel/MilkyWay"]
position = Vector2( -48, 49 )

[node name="Slot3" type="Position2D" parent="HBoxContainer/Panel/MilkyWay"]
position = Vector2( -53, -38 )

[node name="Slot4" type="Position2D" parent="HBoxContainer/Panel/MilkyWay"]
position = Vector2( 35, -89 )

[node name="Slot5" type="Position2D" parent="HBoxContainer/Panel/MilkyWay"]
position = Vector2( 146, -20 )

[node name="Slot6" type="Position2D" parent="HBoxContainer/Panel/MilkyWay"]
position = Vector2( 151, 80 )

[node name="Slot7" type="Position2D" parent="HBoxContainer/Panel/MilkyWay"]
position = Vector2( -22, 176 )

[node name="Slot8" type="Position2D" parent="HBoxContainer/Panel/MilkyWay"]
position = Vector2( -156, 35 )

[node name="Slot9" type="Position2D" parent="HBoxContainer/Panel/MilkyWay"]
position = Vector2( -91, -135 )

[node name="Slot10" type="Position2D" parent="HBoxContainer/Panel/MilkyWay"]
position = Vector2( 62, -178 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 704.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="HBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 374.0
rect_min_size = Vector2( 320, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
max_columns = 5

[node name="Description" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 320.0
margin_bottom = 409.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 0.5
text = "Description:
"

[node name="DescriptionText" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 413.0
margin_right = 320.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.5
autowrap = true
clip_text = true

[node name="MousePosition" type="Node2D" parent="."]

[connection signal="gui_input" from="." to="." method="_on_SpellBook_gui_input"]
[connection signal="item_rect_changed" from="HBoxContainer/Panel" to="." method="_on_Panel_item_rect_changed"]
[connection signal="item_activated" from="HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
